Fix GitHub Pages deployment - copy website files to root level

--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -24,10 +24,15 @@ jobs:
       - name: Setup Pages
         uses: actions/configure-pages@v4
 
+      - name: Copy website files
+        run: |
+          mkdir -p _site
+          cp -r redknot-website/* _site/
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: "./redknot-website"
+          path: "_site"
 
       - name: Deploy to GitHub Pages
         id: deployment
