Update GitHub Pages workflow to deploy from docs/ directory
- Change source from redknot-website/ to docs/ for better GitHub Pages integration
- Ensures latest website changes are deployed automatically

--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Copy website files
         run: |
           mkdir -p _site
-          cp -r redknot-website/* _site/
+          cp -r docs/* _site/
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
